feat: all 6+ job sources in parallel, maxAgeDays onboarding filter, HowItWorks docs page, bug fixes
- JobSource interface: add maxAgeDays parameter to fetch()
- JobScrapeService: pass maxAgeDays to all sources, build full parallel source list (IrishJobs, LinkedIn, Indeed, Jobs.ie, JobsIreland, JsoupCompany, Adzuna, Reed, EuroJobs, SerpApi, Remotive, WeWorkRemotely, Jobicy, TheMuse)
- OnboardingDeliveryService: read maxAgeDays from profile and pass through
- ProfileService: persist maxAgeDays field
- PreferencesStep: add maxAgeDays slider (1–30 days, default 7)
- ScrapingProgressModal: show all active sources with live counts
- HowItWorksPage: full documentation page (onboarding → scraping → AI → cron)
- App.tsx: add /how-it-works route
- Sidebar: add How It Works nav link